--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/png" href="public/logo1.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="https://res.cloudinary.com/dh1ix1eby/image/upload/v1721678034/ewi8c3kiayddygqoozwc.png"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hotel Booking</title>
     </head>
