--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.ico" />
         <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="https://res.cloudinary.com/dh1ix1eby/image/upload/v1721678034/ewi8c3kiayddygqoozwc.png"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+            rel="stylesheet"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Hotel Booking</title>
+        <title>Booking</title>
     </head>
     <body>
         <div id="root"></div>
